--- a/bridges-2026/Gilbert.tex
+++ b/bridges-2026/Gilbert.tex
@@ -91,7 +91,7 @@ Tautenhahn's exploration details the parity arguments necessary for when a subdi
 without creating diagonal moves. %, where diagonal moves are called \textit{notches} here.
 
 Another method that generalizes the Hilbert curve to arbitrary rectangle regions has been done by in Zhang, Kamata and Ueshige \cite{zhang2006}
-but their algorithm produces runs of straight line motifs througout the curve.
+but their algorithm produces runs of straight line motifs throughout the curve.
 We also find their algorithm to be complex and don't see any easy way to generalize their method to 3D.
 
 In this paper, we extend Tautenhahn's ideas to create a 2D and 3D generalized Hilbert curve.
@@ -615,6 +615,9 @@ uses for visualizations (\cite{lee2025}).
 
 When designing an algorithm to generalize the Hilbert curve, four features that might be desirable are:
 
+% curve compatible?
+% curve aligned?
+% 
 \begin{table}[h]
   \centering
   \begin{tabular}[t]{l|l}
@@ -648,7 +651,7 @@ repository \footnote{ \label{gilbert-url} \url{https://github.com/jakubcerveny/g
 
   %\bibitem{hilbert1891} D. Hilbert. ``Ueber die stetige Abbildung einer Linie auf ein Fl{\"a}chenst{\"u}ck.'', \textit{Mathematische Annalen}, vol.~38, 1891, pp.~459-460
 
-  \bibitem{lee2025} S. Lee, K. Ma. ``HINTs: Sensemaking on large collections of documents with {\bf H}ypergraph vizualization and {\bf INT}elligent agents.'' \textit{IEEE Transactions on Visualization and Computer Graphics}, vo.~31, no.~9, 2025, pp.~5532-5546
+  \bibitem{lee2025} S. Lee, K. Ma. ``HINTs: Sensemaking on large collections of documents with {\bf H}ypergraph vizualization and {\bf INT}elligent agents.'' \textit{IEEE Transactions on Visualization and Computer Graphics}, vol.~31, no.~9, 2025, pp.~5532-5546
 
   \bibitem{lutanho2003} L. Tautenhahn. \textit{Draw a space-filling curve of arbitrary size}, 2003. \url{https://lutanho.net/pic2html/draw_sfc.html}.
 
