--- a/bridges-2026/Gilbert.tex
+++ b/bridges-2026/Gilbert.tex
@@ -43,165 +43,110 @@
   Hilbert construction applies most naturally to square or cubic grids with side lengths
   that are exact powers of two.
   We present the \emph{Gilbert curve}, a simple recursive, Hilbert-like construction that
-%  produces Hamiltonian paths on \emph{even width} 2D rectangles and \emph{even sided} 3D rectangular cuboids.
   produces paths on 2D rectangles and 3D rectangular cuboids.
   Our construction explicitly manages endpoint parity constraints, which allows us to extend naturally
-  to 3D.
+  from 2D to 3D.
 \end{abstract}
 
 
 \section*{Introduction}
 
-%\paragraph{Contributions}
-
 Space-filling curves map a one-dimensional ordering to a multi-dimensional grid while
 preserving locality.
-%as much as possible.
-Discrete Hilbert curves, in particular,
-%are commonly
-can be
+Discrete Hilbert curves, in particular, can be
 used to linearize images or volumes for cache-coherent traversal,
 construct spatial indexes, visualize data layout, and more \cite{anders2009, bohm2021, cortesi2011, moon2001, munroe2006}.
 In practical settings, however, underlying grids might not be square or cubic with
-power-of-two side lengths. Images and volumes can come in arbitrary dimensions;
-tiling, padding, or resampling to fit a power-of-two Hilbert curve introduces overhead
+power-of-two side lengths. Images and volumes can come in arbitrary dimensions.
+Tiling, padding, or resampling to fit a power-of-two Hilbert curve introduces overhead
 and can harm locality near boundaries.
 
+    %\caption{2D Gilbert curves for i) $8\times 8$, ii) $18\times 6$, iii) $13\times 8$ (with notch), iv) $14\times 14$.}
+    %\caption{3D Gilbert curves for i) $4 \times 4 \times 4$, ii) $6 \times 6 \times 6$, iii) $8 \times 4 \times 4$, iv) $5  \times 4 \times 4$ (with notch).}
 
 \begin{figure}[!htb]
   \begin{minipage}{0.48\textwidth}
     \centering
     \includegraphics[width=\linewidth]{gilbert2d_examples.pdf}
-    \caption{2D Gilbert curves for i) $8\times 8$, ii) $18\times 6$, iii) $13\times 8$ (with notch), iv) $14\times 14$.}
+    \caption{2D Gilbert curves for i) $8\times 8$, ii) $18\times 6$, iii) $13\times 8$ (with diag. move), iv) $14\times 14$.}
     \label{fig:gilbert2d_examples}
   \end{minipage}\hfill
   \begin{minipage}{0.46\textwidth}
     \centering
     \includegraphics[width=\linewidth]{gilbert3d_orig_examples.pdf}
-    \caption{3D Gilbert curves for i) $4 \times 4 \times 4$, ii) $6 \times 6 \times 6$, iii) $8 \times 4 \times 4$, iv) $5  \times 4 \times 4$ (with notch).}
+    \caption{3D Gilbert curves for i) $4 \times 4 \times 4$, \\ ii) $6 \times 6 \times 6$, iii) $8 \times 4 \times 4$, \\ iv) $5  \times 4 \times 4$ (with diag. move).}
     \label{fig:examples3d}
   \end{minipage}
 \end{figure}
 
 
-%This paper presents the \emph{Gilbert curve}, a recursive construction that produces a
-%Hamiltonian path (a non-self-intersecting path visiting every grid vertex exactly once)
-%on \textit{even width} 2D rectangles and \textit{even sided} 3D cuboids.
-%Our goal is a construction that is easy to implement, has a uniform recursive structure,
-%and reduces to the standard Hilbert curve in the power-of-two square/cube cases.
-%In this paper, we:
-
-This paper presents the \emph{Gilbert curve}, a recursive construction that produces a
+This paper presents the \emph{Gilbert curve}, a recursive construction that produces
 paths for 2D rectangles and 3D cuboids.
-Our goal is a construction that is easy to implement, has a uniform recursive structure,
-and reduces to the standard Hilbert curve in the power-of-two square/cube cases.
+Our goal is a path construction that is easy to implement, has a uniform recursive structure,
+and reduces to a Hilbert curve in the power-of-two square/cube cases.
 In this paper, we:
 
 \begin{itemize}
-  \item We describe a simple recursive construction of Hilbert-like
-        %Hamiltonian
-        paths on
-        arbitrary 2D rectangular grids
-  \item We formalize a parity
-        %(``color compatibility'')
-        condition on corner endpoints and
-        use it to guide valid recursive subdivisions
+  \item We describe a simple recursive construction of Hilbert-like paths on arbitrary 2D rectangular grids
+  \item We formalize a parity condition on corner endpoints and use it to guide valid recursive subdivisions
   \item We extend the same construction principles naturally to arbitrary 3D cuboid grids
-        %, reusing the 2D routine for planar subproblems.
 \end{itemize}
 
-Parity constraints of path endpoints preclude all combinations of side lengths from having a strict Hamiltonian
-path, a non self-intersecting path visiting every grid cell exactly once without any diagonal
-moves, and we will address the conditions under which this happens later.
-
-
-%\begin{figure}[!htb]
-%  \centering
-%  \includegraphics[width=\linewidth]{simple_hampath_flat.pdf}
-%  \caption{Hamiltonian path feasibility for small grids. A red `x' marks a corner endpoint that is impossible given the chosen start.}
-%  \label{fig:exampleHampath}
-%\end{figure}
-
+In certain conditions, combinations of side length sizes and the parity of path endpoints 
+preclude a strict non self-intersecting path that visits every cell exactly once (a \textit{Hamiltonian path})
+without any diagonal moves.
+We will briefly address the conditions under which the Gilbert curve algorithm introduces diagonal moves throughout this paper.
 
 
 \section*{Related Work}
 
-Hilbert introduced his eponymous curve as a continuous mapping from the unit interval to the unit square \cite{hilbert1891}.
-Many discrete variants exist; the most common recursive discretization applies most directly to
-power-of-two square (2D) and cubic (3D) grids.
+%Hilbert introduced his eponymous curve as a continuous mapping from the unit interval to the unit square \cite{hilbert1891}.
+%Many discrete variants exist; 
+%the most common recursive discretization applies most directly to
+%power-of-two square (2D) and cubic (3D) grids.
 
-Tautenhahn \cite{lutanho2003} presents an unpublished 2D construction for arbitrary sizes based on combining
-$3\times3$ Peano and $2\times2$ Hilbert block types. While that approach is 2D-only and not purely uniform across scales,
-it motivates an important endpoint-parity constraint that we make explicit. % in Section~\ref{sec:parity}.
+%Hilbert defined a space filling curve, which has been since named the \textit{Hilbert curve}, as a continuous map from the unit interval to the unit square \cite{hilbert1891}.
+Hilbert defined a continuous, space filling curve that maps the unit interval to the unit square, which as been since named the \textit{Hilbet curve} \cite{hilbert1891}.
+One discretization variant applies to square (2D) and cubic (3D) grids with equal sides that are powers of two.
+
+In a website application and scanned note, Tautenhahn \cite{lutanho2003} presented a 2D construction for arbitrary sizes based on combining
+$3\times3$ Peano and $2\times2$ Hilbert block types.
+While Tautenhahn's approach is 2D only and has non-uniform subdivision schemes dependent on side length parity,
+it motivates an important endpoint-parity constraint that we make explicit.
+
+%While that approach is 2D-only and not purely uniform across scales,
 
 Zhang, Kamata, and Ueshige \cite{zhang2006} propose a pseudo-Hilbert scan for arbitrary rectangles.
 Compared to our construction, their method follows a more intricate case structure and does not
 suggest a direct extension to 3D.
 
-%\section{Examples}
-%
-%Figure~\ref{fig:gilbert2d_examples} shows 2D Gilbert curves on a square grid, an eccentric rectangle,
-%and a rectangle with a small notch. Figure~\ref{fig:examples3d} shows analogous 3D examples.
-
 \section*{Parity Constraints on Corner Endpoints}
 \label{sec:parity}
 
-%\begin{figure}[!htb]
-%
-%  \begin{minipage}{0.48\textwidth}
-%
-%    \centering
-%    %\begin{table}[h]
-%    %  \centering
-%      \begin{tabular}[t]{cr|cc}
-%        \multicolumn{2}{c}{ \multirow{2}{*}{Path Possible} } & \multicolumn{2}{c}{Volume} \\
-%        & & \textit{even} & \textit{odd} \\
-%        \hline
-%          %\multirow{2}{*}{$|\alpha| \bmod 2$} & \textit{even} & Yes & Yes \\
-%          \multirow{2}{*}{ $|\alpha|$ } & \textit{even} & Yes & Yes \\
-%           & \textit{odd} & \textbf{No} & Yes \\
-%         \hline
-%      \end{tabular}
-%      \caption{ $|\alpha|$ is the distance of endpoints.
-%                A Hamiltonian path is possible only when $|\alpha|$ is even or both
-%                $|\alpha|$ and the volume are odd. }
-%      \label{table:pathTable}
-%    %\end{table}
-%
-%  \end{minipage}\hfill
-%  \begin{minipage}{0.48\textwidth}
-%
-%    \centering
-%    \includegraphics[width=\linewidth]{simple_hampath.pdf}
-%    \caption{ Examples of Hamiltonian paths for small grid sizes. A red `x' corresponds to no possible path for the chosen endpoints. }
-%    \label{fig:exampleHampath}
-%
-%  \end{minipage}
-%
-%\end{figure}
-
-We will repeatedly need to know when a Hamiltonian path is possible between two corners of a grid.
-The key constraint is parity. Consider the standard checkerboard coloring of an $m\times n$ grid graph (or an $m\times n\times p$ grid graph in 3D):
-adjacent vertices always have opposite color.
+We use a parity argument to determine whether a Hamiltonian path is possible between two grid corner endpoints.
+%We will repeatedly need to know when a Hamiltonian path is possible between two corners of a grid.
+%The key constraint is parity.
+If we consider the standard checkerboard coloring of an $m\times n$ grid graph (or an $m\times n\times p$ grid graph in 3D),
+then adjacent vertices always have opposite color.
 Any path alternates colors at every step, so the parity of the endpoints is constrained by the total number of visited vertices.
 
 \begin{lemma}[Color compatibility]
   \label{lemma:colorCompatibility}
-Let $G$ be a rectangular 2D grid graph with $mn$ vertices, or a rectangular 3D grid graph with $mnp$ vertices.
-Fix a start corner $s$ and an end corner $t$.
+  Let $G$ be a rectangular 2D grid graph with $(m \times n)$ vertices, or a rectangular 3D grid graph with $(m \times n \times p)$ vertices.
+Fix a start corner, $s$, and an end corner, $t$.
 If there exists a Hamiltonian path from $s$ to $t$, then $s$ and $t$ have the \emph{same} color when the number of vertices is odd,
 and \emph{opposite} colors when the number of vertices is even.
 \end{lemma}
 
 \begin{proof}
 Along any path, vertex colors alternate. A Hamiltonian path visits all $N$ vertices exactly once and therefore has $N-1$ steps.
-If $N$ is odd, then $N-1$ is even and the endpoints must have the same color; if $N$ is even, then $N-1$ is odd and the endpoints must have opposite colors.
+If $N$ is odd, then $N-1$ is even and the endpoints must have the same color. If $N$ is even, then $N-1$ is odd and the endpoints must have opposite colors.
 \end{proof}
 
-We call a pair of endpoints \emph{color compatible} if they satisfy the lemma.
+We call a pair of endpoints \emph{color compatible} if they satisfy Lemma \ref{lemma:colorCompatibility}.
 %Figure~\ref{fig:exampleHampath} illustrates the constraint for small 2D grids.
-Color compatibility is necessary in general; for the specific family of corner-to-corner subproblems produced by our construction,
-it is also sufficient, and we use it as a lightweight validity check when selecting subdivisions.
+Color compatibility is necessary, in general, for Hamiltonicity. For the specific family of corner-to-corner subproblems produced by our construction,
+it is also sufficient, and we implicitly use it to choose endpoints and subregions for the recursion.
 
 %For a path starting at $(0,0,0)$ and ending $|\alpha|$ steps in one of the axis-aligned dimensions,
 %then Table \ref{table:pathTable} enumerates this condition under which a valid path is possible.
@@ -249,97 +194,58 @@ it is also sufficient, and we use it as a lightweight validity check when select
 
 \end{figure}
 
-\section*{The 2D Gilbert Curve}
-\label{sec:2d}
-
-Our 2D construction recursively partitions an $m\times n$ rectangle into a small number of axis-aligned sub-rectangles
-and concatenates the subpaths into a single Hamiltonian path.
-Figure~\ref{fig:main2dsubdiv} shows the main 2D subdivision template and
-Figure~\ref{fig:main2dsubdivExample} illustrates one recursion with subregions highlighted.
-
-The vectors $\alpha, \beta, \gamma \in \mathbb{Z}^3$ provide generalized notions of width ($\alpha$), height ($\beta$),
-and depth ($\gamma$), so that we can transform rectangular or cuboid regions as necessary for the recursion.
-Each of $\alpha, \beta, \gamma$ will only have one non-zero component and will be orthogonal to each other,
-representing a snapshot of the current frame of reference.
-
-When dividing into subregions, we choose integral side lengths and prefer even lengths, where possible, to satisfy the
-parity constraints of lemma \ref{lemma:colorCompatibility}. %Section~\ref{sec:parity}.
-Each subregion is solved recursively and then stitched to its neighbors.
-%Figure~\ref{fig:production2d} summarizes the main parity-driven cases.
-
-When one side length is much larger than the other, we optionally apply an \emph{eccentric split} that first bisects the long side.
-This improves robustness on highly elongated rectangles and keeps the recursion structure simple.
-
-
-%\subsection*{2D Gilbert Curve}
-%
-%For the 2D Gilbert curve,
-%the region is subdivided into two squares at the bottom and a rectangle on top, with endpoints
-%joined on the outer perimeter.
-%This process is recursively applied until a trivial path can be produced.
-%Figures \ref{fig:main2dsubdiv} and \ref{fig:gilbert2d_bulk} show two different representations of the template used for the
-%subdivision.
-%Figures \ref{fig:main2dsubdivExample} and \ref{fig:gilbert2d_bulk_example} show color coded examples for dimensions $26 \times 18$ and
-%$42 \times 30$ respectively.
-%
-%If the width like dimension ($\alpha$) is much larger than the height like dimension ($\beta$),
-%an alternate eccentric subdivision template is used to split the region in half along
-%the $\alpha$ length (figure \ref{fig:eccentric_2d_alg}, \ref{fig:eccentric_2d_example_alg}).
-%
-%Each regions parity is chosen so as to try and keep color compatibility, ensuring a valid path if possible.
-%If the $\alpha$ axis line that the endpoints fall on is odd, with the orthogonal $\beta$ direction even, a notch is forced and is directed to the upper right region,
-%as illustrated by the ``even/odd'' case in figure \ref{fig:production2d}.
-
-When the side lengths are exact powers of two, the resulting curve is identical to the 2D Hilbert curve.
-
-%\begin{figure}[!htb]
-%  \centering
-%  \includegraphics[width=\linewidth]{config_production.pdf}
-%  \caption{ Enumeration of the subdivision template depending on different parities of $\alpha$ and $\beta$ dimensions. }
-%  \label{fig:production2d}
-%\end{figure}
-
-
-\section*{Extension to 3D}
-\label{sec:3d}
-
-In the normal case, a subdivision scheme is used to split the cuboid into five regions.
-Two cube like regions are partitioned where the path starts and stops, and three oblong cuboid regions are partitioned
-for the middle portion of the path.
-Figure \ref{fig:gilbert3DJSplit} provides an exploded view of the main subdivision and where the endpoints line up.
-See also figure \ref{fig:gilbert3d_bulk_template} for the template and Figure \ref{fig:gilbert3d_bulk_example}
-for a $10 \times 10 \times 10$ example, with each region color coded.
-
-Endpoints within a sub-divided region are kept on the exterior of the parent cuboid and joined after the resulting recursion
-has completed.
-As with the 2D Gilbert curve, when side dimensions are equal and exact powers of two, the resulting curve is identical to the
-corresponding 3D Hilbert curve.
-
-During the course of sub-division, if the width like dimension ($\alpha$) is much larger, the curve is split in half along
-the $\alpha$ length (Figure \ref{fig:gilbert3d_eccentric_alpha}, \ref{fig:gilbert3d_eccentric_alpha_example}).
-If the $\alpha$ eccentric split is not triggered, the height-like dimension, $\beta$, is then compared to the depth-like dimension, $\gamma$
-and, if very much larger, an eccentric subdivision scheme is used that splits in the $\alpha$ and $\beta$ direction
-(Figure \ref{fig:gilbert3d_eccentric_beta}, \ref{fig:gilbert3d_eccentric_beta_example}).
-If both $\alpha$ and $\beta$ are not much larger, a check is done to see if the depth-like dimension, $\gamma$, is much larger than
-than the height-like dimension, $\beta$, splitting in the $\alpha$ and $\gamma$ direction if so
-(Figure \ref{fig:gilbert3d_eccentric_gamma}, \ref{fig:gilbert3d_eccentric_gamma_example}).
-
-If any of the subdivided regions has endpoints that lay in a direction with
-odd length, a notch will appear.
-This means the number of notches for the 3D Gilbert curve isn't limited to one in the case a side length is odd.
-
-In the case all side lengths are even, the subdivision will always choose an even length until the base case is
-encountered, ensuring a notch-free realization.
-
 \section*{Algorithms}
 \label{sec:algorithms}
 
-Algorithms~\ref{alg:gilbert2d} and~\ref{alg:gilbert3d} give pseudocode for the 2D and 3D constructions.
-We represent an oriented grid-aligned rectangle or cuboid by an origin $p\in\mathbb{Z}^3$ and axis vectors
-$\alpha,\beta,\gamma\in\mathbb{Z}^3$ whose nonzero components encode the side lengths and directions.
+Algorithms~\ref{alg:gilbert2d} and~\ref{alg:gilbert3d} give pseudocode for the 2D and 3D Gilbert curve constructions.
+We represent an oriented grid-aligned rectangle or cuboid by an origin $p\in\mathbb{Z}^d$ and axis vectors
+$\alpha,\beta,\gamma\in\mathbb{Z}^d$, $d \in \{2,3\}$, whose nonzero components encode the side lengths and directions.
 The function $\delta(\cdot)$ returns the unit axis direction of its argument, and $\text{div}(\cdot,\cdot)$ denotes
 integer division (rounding toward zero).
-Eccentric splits are triggered by simple aspect-ratio thresholds in the pseudocode.
+To make things more concise, a convenience function is used,
+$(\Delta( \rho_2,\rho ) \overset{\mathrm{def}}{=} (\textit{ if } (|\rho _ 2| \equiv 1 \bmod{2} \text{ and } |\rho| > 2) \to \delta(\rho), \textit{ else } \to 0))$,
+to help coerce values to be even in the the non-degenerate case.
+
+The next sections go into detail about the 2D construction and its extension to 3D.
+
+
+\section*{The 2D Gilbert Curve}
+\label{sec:2d}
+
+%Our 2D construction recursively partitions an $m\times n$ rectangle into a small number of axis-aligned sub-rectangles
+The 2D Gilbert curve construction recursively partitions an $m\times n$ rectangle into a small number of axis-aligned sub-rectangles
+and concatenates the subpaths into a single path. %Hamiltonian path.
+Figure~\ref{fig:main2dsubdiv} shows the main 2D subdivision template and
+Figure~\ref{fig:main2dsubdivExample} illustrates one recursion with subregions highlighted.
+
+%The vectors $\alpha, \beta \in \mathbb{Z}^3$ provide generalized notions of width ($\alpha$), height ($\beta$),
+%and depth ($\gamma$), so that we can transform rectangular or cuboid regions as necessary for the recursion.
+The vectors $\alpha, \beta \in \mathbb{Z}^2$ provide generalized notions of width ($\alpha$) and height ($\beta$).
+Each of $\alpha, \beta$ will only have one non-zero component and will be orthogonal to each other,
+representing a snapshot of the current frame of reference.
+
+When dividing into subregions, we choose integral side lengths and prefer an even local width-like length for the first region
+(e.g. region $A$ in Figures \ref{fig:main2dsubdiv}, \ref{fig:main2dsubdivExample}) to satisfy the
+parity constraints of Lemma \ref{lemma:colorCompatibility}. %Section~\ref{sec:parity}.
+Each subregion is solved recursively and then stitched to its neighbors.
+Figure \ref{fig:gilbert2d_bulk} shows a color coded subdivision template and Figure \ref{fig:gilbert2d_bulk_example} shows a color coded example with stitched endpoints highlighted.
+%Figure~\ref{fig:production2d} summarizes the main parity-driven cases.
+
+As a heuristic to keep subregions square like,
+the parent region is bisected 
+if the aspect ratio of width to height exceeds a $(3/2)$ threshold.
+After bisection, the algorithm recursively proceeds on each half as normal.
+See Figure \ref{fig:eccentric_2d_alg} for the subdivision template and Figure \ref{fig:eccentric_2d_example_alg} for an example of the bisection subdivision.
+
+If the width like side length is odd with the height even, a diagonal move is forced as the endpoints won't be
+color compatible anymore.
+In such a case, there will be a single diagonal move in the resulting path and it will be guided to appear in the upper right
+hand corner, as the $B$ region (Figure \ref{fig:main2dsubdiv}) will retain the odd width and even height.
+
+In all other cases (even width, odd width and height), a Hamiltonian path is possible without diagonal moves.
+When the side lengths are exact powers of two, the resulting curve is identical to the 2D Hilbert curve.
+Algorithm~\ref{alg:gilbert2d} gives pseudo code for the 2D Gilbert curve.
+
 
 \begin{minipage}[!htb]{0.43\linewidth}
 \begin{algorithm}[H]
@@ -347,7 +253,7 @@ Eccentric splits are triggered by simple aspect-ratio thresholds in the pseudoco
   \label{alg:gilbert2d}
   \begin{algorithmic}
 
-    \State \textit{\# $p, \alpha, \beta \in \mathbb{Z}^3$}
+    \State \textit{\# $p, \alpha, \beta \in \mathbb{Z}^2$}
     \Function{Gilbert2D}{$p$, $\alpha$, $\beta$}
       \State $\alpha_2, \beta_2  = \text{div}(\alpha, 2), \text{div}(\beta, 2)$
       \If{ $(|\beta| \equiv 1)$ }
@@ -412,14 +318,37 @@ Eccentric splits are triggered by simple aspect-ratio thresholds in the pseudoco
 
 \end{minipage}
 
+\section*{Extension to 3D}
+\label{sec:3d}
 
+In the basic case, a subdivision scheme is used to split the cuboid into five regions.
+Two cube like regions are partitioned where the path starts and stops, and three oblong cuboid regions are partitioned
+for the middle portion of the path.
+Figure \ref{fig:gilbert3DJSplit} provides an exploded view of the main subdivision and where endpoints connect.
+See also Figure \ref{fig:gilbert3d_bulk_template} for the template and Figure \ref{fig:gilbert3d_bulk_example}
+for a $10 \times 10 \times 10$ example, with each region color coded.
 
+During the course of subdivision, if the cuboid has an aspect ratio of width to either height or depth that exceeds $(3/2)$,
+a horizontal bisection is done.
+Two other anisotropic cases are tested for when the aspect ratio of height to depth or depth to height exceeds a $(4/3)$ threshold.
+The reader is referred to Algorithm \ref{alg:gilbert3d} for further details.
 
+%If subregions have aspect ratio that 
+%During the course of sub-division, if the width like dimension ($\alpha$) is much larger, the curve is split in half along
+%the $\alpha$ length (Figure \ref{fig:gilbert3d_eccentric_alpha}, \ref{fig:gilbert3d_eccentric_alpha_example}).
+%If the $\alpha$ eccentric split is not triggered, the height-like dimension, $\beta$, is then compared to the depth-like dimension, $\gamma$
+%and, if very much larger, an eccentric subdivision scheme is used that splits in the $\alpha$ and $\beta$ direction
+%(Figure \ref{fig:gilbert3d_eccentric_beta}, \ref{fig:gilbert3d_eccentric_beta_example}).
+%If both $\alpha$ and $\beta$ are not much larger, a check is done to see if the depth-like dimension, $\gamma$, is much larger than
+%than the height-like dimension, $\beta$, splitting in the $\alpha$ and $\gamma$ direction if so
+%(Figure \ref{fig:gilbert3d_eccentric_gamma}, \ref{fig:gilbert3d_eccentric_gamma_example}).
 
-
-% (Discussion of ``harmony'' and defect-based eccentric-split tuning omitted from the main paper;
-% see Section~\ref{sec:outlook} for a brief outlook.)
-
+Endpoints within a sub-divided region are kept on the exterior of the parent cuboid and joined after the resulting recursion
+has completed.
+In the case all side lengths are even, the subdivision will always choose an even length until the base case is
+encountered, ensuring a Hamiltonian path and a realization free from diagonal moves.
+As with the 2D Gilbert curve, when side dimensions are equal and exact powers of two, the resulting curve is identical to
+one variant of the 3D Hilbert curve.
 
 
 \begin{minipage}[ht]{0.5\linewidth}
@@ -431,9 +360,13 @@ Eccentric splits are triggered by simple aspect-ratio thresholds in the pseudoco
     \State \textit{\# $p, \alpha, \beta, \gamma \in \mathbb{Z}^3$}
     \Function{Gilbert3D}{$p$, $\alpha$, $\beta$, $\gamma$}
 
-    \State \Return Gilbert2D($p$,$\beta$,$\gamma$) \textbf{if} $(|\alpha| \equiv 1)$
-    \State \Return Gilbert2D($p$,$\alpha$,$\gamma$) \textbf{if} $(|\beta| \equiv 1)$
-    \State \Return Gilbert2D($p$,$\alpha$,$\beta$) \textbf{if} $(|\gamma| \equiv 1)$
+    \If{ $(|\beta| \equiv 1)$ \textbf{ and } $(|\gamma| \equiv 1)$ }
+      \State \textbf{yield} $p + i \cdot \delta(\alpha)$ \textbf{forall} $i \in |\alpha|$
+    \ElsIf{ $(|\alpha| \equiv 1)$ \textbf{ and } $(|\gamma| \equiv 1)$ }
+      \State \textbf{yield} $p + i \cdot \delta(\beta)$ \textbf{forall} $i \in |\beta|$
+    \ElsIf{ $(|\alpha| \equiv 1)$ \textbf{ and } $(|\beta| \equiv 1)$ }
+      \State \textbf{yield} $p + i \cdot \delta(\gamma)$ \textbf{forall} $i \in |\gamma|$
+    \EndIf
 
     \State $\alpha_2 \leftarrow \text{div}(\alpha,2) + \Delta(\alpha _ 2, \alpha)$
     \State $\beta_2 \leftarrow \text{div}(\beta,2) + \Delta(\beta _ 2, \beta)$
@@ -465,6 +398,8 @@ Eccentric splits are triggered by simple aspect-ratio thresholds in the pseudoco
 \end{algorithm}
 \end{minipage}\hfill
 \begin{minipage}[ht]{0.5\linewidth}
+
+  \vspace{12.0em}
 
 	\begin{minipage}{0.49\textwidth}
 		\centering
@@ -526,6 +461,10 @@ Eccentric splits are triggered by simple aspect-ratio thresholds in the pseudoco
 
 \end{minipage}
 
+If any of the subdivided regions has endpoints that lay in a direction with
+odd side length, a diagonal move will appear.
+As such, with the subdivision scheme presented, the number of diagonal moves in the resulting curve isn't limited to one.
+
 
 \section*{Summary and Conclusions}
 \label{sec:outlook}
@@ -536,19 +475,17 @@ power-of-two constructions, while maintaining a recursive, locality-preserving t
 Such layouts are useful for cache-coherent image/volume traversal, spatial indexing, and visualization
 of 1D data on 2D/3D grids \cite{anders2009, bohm2021, cortesi2011, moon2001}.
 
-There are several natural directions for future work.
-First, while our eccentric-split thresholds are simple and work well in practice, one can define more
+%There are several natural directions for future work.
+%First, while our anisotropic-split thresholds are simple and work well in practice, one can define more
+%explicit optimization criteria for when and how to switch subdivision templates.
+%Second, in 3D, relaxing subproblem endpoint constraints may allow constructions that further reduce
+%the occurrence of forced diagonal steps when one or more side lengths are odd.
+%Finally, more refined choices of subdivision schemes could be explored that focus on regularity metrics and/or perceptual quality.
+
+While our anisotropic-split thresholds are simple and work well in practice, future work could define more
 explicit optimization criteria for when and how to switch subdivision templates.
-Second, in 3D, relaxing subproblem endpoint constraints may allow constructions that further reduce
+In 3D, relaxing subproblem endpoint constraints may allow constructions that further reduce
 the occurrence of forced diagonal steps when one or more side lengths are odd.
-Finally, more refined choices of subdivision could be explored focused on regularity metrics and/or perceptual quality.
-
-%\section*{Conclusion}
-
-%We presented the Gilbert curve, a simple recursive construction of Hilbert-like Hamiltonian paths on arbitrary
-%2D rectangles and 3D cuboids. The construction is guided by a clean parity (color compatibility) constraint
-%on corner endpoints and extends naturally from 2D to 3D.
-
 
 A libre/free/open implementation for the Gilbert curve in 2D and 3D has been developed and can be downloaded from its
 repository \footnote{ \label{gilbert-url} \url{https://github.com/jakubcerveny/gilbert} }.
@@ -585,13 +522,13 @@ AI tools were used in assisting the language and readability of this paper.
 \end{thebibliography}
 } % end setlength, raggedright
 
-\begin{figure}[!htb]
-  \centering
-  %{\transparent{0.4}\includegraphics[width=\linewidth]{gilbert_bd50x10.pdf}}
-  \includegraphics[width=0.9\linewidth]{gilbert_bd50x10.pdf}
-  %\includegraphics[width=0.8\linewidth]{gilbert_fun_50x6.pdf}
-  \label{fig:footerGilbert}
-\end{figure}
+%\begin{figure}[!htb]
+%  \centering
+%  %{\transparent{0.4}\includegraphics[width=\linewidth]{gilbert_bd50x10.pdf}}
+%  \includegraphics[width=0.9\linewidth]{gilbert_bd50x10.pdf}
+%  %\includegraphics[width=0.8\linewidth]{gilbert_fun_50x6.pdf}
+%  \label{fig:footerGilbert}
+%\end{figure}
 
 
 \end{document}
