--- a/bridges-2026/Gilbert.tex
+++ b/bridges-2026/Gilbert.tex
@@ -93,8 +93,8 @@ In this paper, we:
 
 In certain conditions, combinations of side length sizes and the parity of path endpoints
 preclude a strict non self-intersecting path that visits every cell exactly once (a \textit{Hamiltonian path})
-without any diagonal moves.  % diagonal "steps" instead?
-We will briefly address the conditions under which the Gilbert curve algorithm introduces diagonal moves throughout this paper.
+without any diagonal steps.
+We will briefly address the conditions under which the Gilbert curve algorithm introduces diagonal steps throughout this paper.
 
 
 \section*{Related Work}
