bug fix for algorithm 2 (Gilbert3D)
* bottom portion wasn't wrapped in conditional, so after
  linear condition, would fall through to bottom conditionals
* put variable declaration at the top
* put everyting in a long conditional change, like in Gilbert2D (algorithm 1)

--- a/bridges-2026/Gilbert.tex
+++ b/bridges-2026/Gilbert.tex
@@ -346,36 +346,48 @@ the standard 3D Hilbert curve.
     \State \textit{\# $p, \alpha, \beta, \gamma \in \mathbb{Z}^3$}
     \Function{Gilbert3D}{$p$, $\alpha$, $\beta$, $\gamma$}
 
-    \If{ $(|\beta| \equiv 1)$ \textbf{ and } $(|\gamma| \equiv 1)$ }
-      \State \textbf{yield} $p + i \cdot \delta(\alpha)$ \textbf{forall} $i \in |\alpha|$
-    \ElsIf{ $(|\alpha| \equiv 1)$ \textbf{ and } $(|\gamma| \equiv 1)$ }
-      \State \textbf{yield} $p + i \cdot \delta(\beta)$ \textbf{forall} $i \in |\beta|$
-    \ElsIf{ $(|\alpha| \equiv 1)$ \textbf{ and } $(|\beta| \equiv 1)$ }
-      \State \textbf{yield} $p + i \cdot \delta(\gamma)$ \textbf{forall} $i \in |\gamma|$
-    \EndIf
-
+    \vskip0.5em
     \State $\alpha_2 \leftarrow \text{div}(\alpha,2) + \Delta(\alpha _ 2, \alpha)$
     \State $\beta_2 \leftarrow \text{div}(\beta,2) + \Delta(\beta _ 2, \beta)$
     \State $\gamma_2 \leftarrow \text{div}(\gamma,2) + \Delta(\gamma _ 2, \gamma)$
 
-    \State \textbf{if }$(2 |\alpha|>3|\beta|) \text{ and } (2|\alpha|>3|\gamma|))$
-    \State \hskip1.0em \textbf{yield} Gilbert3D($p$,$\alpha _ 2$,$\beta$,$\gamma$)
-    \State \hskip1.0em \textbf{yield} Gilbert3D($p + \alpha _ 2$,$\alpha - \alpha _ 2$,$\beta$,$\gamma$)
-    \State \textbf{else if }$(3 |\beta| > 4 |\gamma|)$
-    \State \hskip1.0em \textbf{yield} Gilbert3D($p$,$\beta _ 2$,$\gamma$,$\alpha _ 2$)
-    \State \hskip1.0em \textbf{yield} Gilbert3D($p + \beta _ 2$,$\alpha$,$\beta - \beta _ 2$,$\gamma$)
-    \State \hskip1.0em \textbf{yield} Gilbert3D($p + $ \\ \hskip9.125em $(\alpha - \delta(\alpha)) +$ \\ \hskip9.125em $(\beta _ 2 - \delta(\beta))$, \\ \hskip9.125em $-\beta _ 2$,$\gamma$,$-(\alpha - \alpha _ 2)$)
-    \State \textbf{else if }$(3 |\gamma| > 4 |\beta|)$
-    \State \hskip1.0em \textbf{yield} Gilbert3D($p$,$\gamma _ 2$,$\alpha _ 2$,$\beta$)
-    \State \hskip1.0em \textbf{yield} Gilbert3D($p + \gamma _ 2$,$\alpha$, $\beta$, $\gamma - \gamma _ 2$)
-    \State \hskip1.0em \textbf{yield} Gilbert3D($p +$ \\ \hskip9.125em $(\alpha - \delta(\alpha))$ \\ \hskip9.125em $(\gamma2 - \delta(\gamma))$, \\ \hskip9.5em $-\gamma _ 2$,$-(\alpha-\alpha _ 2)$, $\beta$)
 
-    \State
+    %\If{ $(|\beta| \equiv 1)$ \textbf{ and } $(|\gamma| \equiv 1)$ }
+    %  \State \textbf{yield} $p + i \cdot \delta(\alpha)$ \textbf{forall} $i \in |\alpha|$
+    %\ElsIf{ $(|\alpha| \equiv 1)$ \textbf{ and } $(|\gamma| \equiv 1)$ }
+    %  \State \textbf{yield} $p + i \cdot \delta(\beta)$ \textbf{forall} $i \in |\beta|$
+    %\ElsIf{ $(|\alpha| \equiv 1)$ \textbf{ and } $(|\beta| \equiv 1)$ }
+    %  \State \textbf{yield} $p + i \cdot \delta(\gamma)$ \textbf{forall} $i \in |\gamma|$
+    %\EndIf
+
+    \vskip0.5em
+
+    \State \textbf{if }$(|\beta| \equiv 1)$ \textbf{ and } $(|\gamma| \equiv 1)$
+      \State \hskip1.0em \textbf{yield} $p + i \cdot \delta(\alpha)$ \textbf{forall} $i \in |\alpha|$
+    \State \textbf{else if }$(|\alpha| \equiv 1)$ \textbf{ and } $(|\gamma| \equiv 1)$
+      \State \hskip1.0em \textbf{yield} $p + i \cdot \delta(\beta)$ \textbf{forall} $i \in |\beta|$
+    \State \textbf{else if }$(|\alpha| \equiv 1)$ \textbf{ and } $(|\beta| \equiv 1)$
+      \State \hskip1.0em \textbf{yield} $p + i \cdot \delta(\gamma)$ \textbf{forall} $i \in |\gamma|$
+
+    \vskip0.5em
+
+    \State \textbf{else if }$(2 |\alpha|>3|\beta|) \text{ and } (2|\alpha|>3|\gamma|))$
+      \State \hskip1.0em \textbf{yield} Gilbert3D($p$,$\alpha _ 2$,$\beta$,$\gamma$)
+      \State \hskip1.0em \textbf{yield} Gilbert3D($p + \alpha _ 2$,$\alpha - \alpha _ 2$,$\beta$,$\gamma$)
+    \State \textbf{else if }$(3 |\beta| > 4 |\gamma|)$
+      \State \hskip1.0em \textbf{yield} Gilbert3D($p$,$\beta _ 2$,$\gamma$,$\alpha _ 2$)
+      \State \hskip1.0em \textbf{yield} Gilbert3D($p + \beta _ 2$,$\alpha$,$\beta - \beta _ 2$,$\gamma$)
+      \State \hskip1.0em \textbf{yield} Gilbert3D($p + $ \\ \hskip9.125em $(\alpha - \delta(\alpha)) +$ \\ \hskip9.125em $(\beta _ 2 - \delta(\beta))$, \\ \hskip9.125em $-\beta _ 2$,$\gamma$,$-(\alpha - \alpha _ 2)$)
+    \State \textbf{else if }$(3 |\gamma| > 4 |\beta|)$
+      \State \hskip1.0em \textbf{yield} Gilbert3D($p$,$\gamma _ 2$,$\alpha _ 2$,$\beta$)
+      \State \hskip1.0em \textbf{yield} Gilbert3D($p + \gamma _ 2$,$\alpha$, $\beta$, $\gamma - \gamma _ 2$)
+      \State \hskip1.0em \textbf{yield} Gilbert3D($p +$ \\ \hskip9.125em $(\alpha - \delta(\alpha))$ \\ \hskip9.125em $(\gamma2 - \delta(\gamma))$, \\ \hskip9.5em $-\gamma _ 2$,$-(\alpha-\alpha _ 2)$, $\beta$)
+
     \State \textbf{else }
-    \State \hskip1.0em \textbf{yield} Gilbert3D($p$,$\beta _ 2$,$\gamma _ 2$,$\alpha _ 2$)
-    \State \hskip1.0em \textbf{yield} Gilbert3D($p + \beta _ 2$,$\gamma$,$\alpha _ 2$,$(\beta - \beta _ 2)$)
-    \State \hskip1.0em \textbf{yield} Gilbert3D($p +$ \\ \hskip9.125em $(\beta _ 2 - \delta(\beta)) +$ \\ \hskip9.125em $(\gamma - \delta(\gamma))$, \\ \hskip9.5em $\alpha$,$-\beta_2$,$-(\gamma-\gamma_2)$)
-    \State \hskip1.0em \textbf{yield} Gilbert3D($p +$ \\ \hskip9.125em $(\alpha _ 2 - \delta(\alpha)) +$ \\ \hskip9.125em $\beta _ 2 + (\gamma - \delta(\gamma))$, \\ \hskip9.5em $-\gamma$,$-(\alpha - \alpha_2)$,$(\beta-\beta_2)$)
+      \State \hskip1.0em \textbf{yield} Gilbert3D($p$,$\beta _ 2$,$\gamma _ 2$,$\alpha _ 2$)
+      \State \hskip1.0em \textbf{yield} Gilbert3D($p + \beta _ 2$,$\gamma$,$\alpha _ 2$,$(\beta - \beta _ 2)$)
+      \State \hskip1.0em \textbf{yield} Gilbert3D($p +$ \\ \hskip9.125em $(\beta _ 2 - \delta(\beta)) +$ \\ \hskip9.125em $(\gamma - \delta(\gamma))$, \\ \hskip9.5em $\alpha$,$-\beta_2$,$-(\gamma-\gamma_2)$)
+      \State \hskip1.0em \textbf{yield} Gilbert3D($p +$ \\ \hskip9.125em $(\alpha _ 2 - \delta(\alpha)) +$ \\ \hskip9.125em $\beta _ 2 + (\gamma - \delta(\gamma))$, \\ \hskip9.5em $-\gamma$,$-(\alpha - \alpha_2)$,$(\beta-\beta_2)$)
     \State \hskip1.0em \textbf{yield} Gilbert3D($p +$ \\ \hskip9.125em $(\alpha - \delta(\alpha)) +$ \\ \hskip9.125em $(\beta _ 2 - \delta(\beta))$, \\ \hskip9.5em $-\beta _ 2$,$\gamma _ 2$,$-(\alpha - \alpha_2)$)
 
     \EndFunction
