--- a/bridges-2026/Gilbert.tex
+++ b/bridges-2026/Gilbert.tex
@@ -41,7 +41,7 @@
   Hilbert curves are classic space-filling curves with strong locality properties, widely
   used for linearizing 2D and 3D data. In their discrete form, however, the standard
   Hilbert construction applies most naturally to square or cubic grids with side lengths
-  that are exact powers of two.
+  that are exact powers-of-two.
   We present the \emph{Gilbert curve}, a simple recursive, Hilbert-like discrete space-filling
   curve that produces Hamiltonian paths on all even-sized 2D rectangles and 3D rectangular cuboids,
   and relaxed traversals on odd-sized domains.
@@ -220,7 +220,7 @@ In such a case, there will be a single diagonal move in the resulting path and i
 hand corner, as the $B$ region (Figure \ref{fig:main2dsubdiv}) will retain the odd width and even height.
 
 In all other cases (even width, odd width and height), a Hamiltonian path is possible without diagonal moves.
-When the side lengths are exact powers of two, the resulting curve is identical to the 2D Hilbert curve.
+When the side lengths are exact powers-of-two, the resulting curve is identical to the 2D Hilbert curve.
 Algorithm~\ref{alg:gilbert2d} gives pseudo code for the 2D Gilbert curve.
 
 
@@ -333,7 +333,7 @@ Endpoints within a sub-divided region are kept on the exterior of the parent cub
 has completed.
 In the case all side lengths are even, the subdivision will always choose an even length until the base case is
 encountered, ensuring a Hamiltonian path and a realization free from diagonal moves.
-As with the 2D Gilbert curve, when side dimensions are equal and exact powers of two, the resulting curve is identical to
+As with the 2D Gilbert curve, when side dimensions are equal and exact powers-of-two, the resulting curve is identical to
 the standard 3D Hilbert curve.
 
 
